--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Bible stories, English -- New Testament'
 - !lcsh 'Jews -- History'
 - !lcc 'BS'
+- GITenberg
 title: "\"Granny's Chapters\" (on scriptural subjects)\r\nThe New Testament, with\
   \ a Sketch of the Subsequent History of the Jews."
 url: http://www.gutenberg.org/ebooks/38557
